--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [{ name = "Hyunmin Cheong" }]
 requires-python = ">=3.9"
 
 dependencies = [
-    "numpy",
+    "numpy<2",
     "pillow",
     "torch",
     "openmdao",
@@ -20,6 +20,7 @@ dependencies = [
     "tqdm",
     "pydantic",
     "h5py",
+    "pymoo"
 ]
 
 [build-system]
